--- a/rake_main_board_controller.ioc
+++ b/rake_main_board_controller.ioc
@@ -6,7 +6,7 @@ Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
 Mcu.IP3=TIM2
-Mcu.IP4=USART1
+Mcu.IP4=UART4
 Mcu.IP5=USART2
 Mcu.IP6=USART3
 Mcu.IPNb=7
@@ -16,12 +16,12 @@ Mcu.Pin0=PH0-OSC_IN
 Mcu.Pin1=PH1-OSC_OUT
 Mcu.Pin10=VP_SYS_VS_Systick
 Mcu.Pin11=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin2=PA2
-Mcu.Pin3=PA3
-Mcu.Pin4=PB10
-Mcu.Pin5=PB11
-Mcu.Pin6=PA9
-Mcu.Pin7=PA10
+Mcu.Pin2=PA0-WKUP
+Mcu.Pin3=PA1
+Mcu.Pin4=PA2
+Mcu.Pin5=PA3
+Mcu.Pin6=PB10
+Mcu.Pin7=PB11
 Mcu.Pin8=PA13
 Mcu.Pin9=PA14
 Mcu.PinsNb=12
@@ -40,12 +40,14 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true
-NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.UART4_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.USART3_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
-PA10.Mode=Asynchronous
-PA10.Signal=USART1_RX
+PA0-WKUP.Mode=Asynchronous
+PA0-WKUP.Signal=UART4_TX
+PA1.Mode=Asynchronous
+PA1.Signal=UART4_RX
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
@@ -54,8 +56,6 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA9.Mode=Asynchronous
-PA9.Signal=USART1_TX
 PB10.Mode=Asynchronous
 PB10.Signal=USART3_TX
 PB11.Mode=Asynchronous
@@ -99,7 +99,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_UART4_Init-UART4-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
 RCC.APB2Freq_Value=16000000
@@ -123,8 +123,8 @@ RCC.VcooutputI2S=96000000
 TIM2.IPParameters=Period,Prescaler
 TIM2.Period=999
 TIM2.Prescaler=15
-USART1.IPParameters=VirtualMode
-USART1.VirtualMode=VM_ASYNC
+UART4.IPParameters=VirtualMode
+UART4.VirtualMode=Asynchronous
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 USART3.IPParameters=VirtualMode
